# Intelligent_Seeker_C

./: CMakeLists.txt  EnvironmentalConfiguration.sh  FunctionalAnalysis.drawio  README.md  compile.sh
include/CircularBuffer/: CircularBuffer.hpp
include/ImageMatcher/: ImageMatcher.hpp
include/Monitor/: Monitor.hpp
include/Reader/: Reader.hpp  config.h  ekho.h  ekho_impl.h
include/SpeechRecognition/: SpeechRecognition.hpp
include/WakeWord/: Watchdog.h  snowboy-detect-c-wrapper.h
include/databases/: database.hpp
include/log_system/: LoggingSystem.h
include/nlohmann/: JSON.hpp
include/yolo/: yolo.hpp
include/yolo/opencv2/: cvconfig.h  opencv_modules.hpp
install/: Seeker  SpeechRecognition.py  result.json  setup.py
install/config/: yolov5.json
install/models/WakeWord/: model.pmdl
libs/yolo/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
src/: main.cpp
src/Communication/: mongoose.c
src/Watchdog/: watchdog.cpp
src/log_system/: LoggingSystem.cpp
test/: MOT.cpp  Reader.cpp  SpeechRecognition.cpp  communication.cpp  database.cpp  json.cpp  log.cpp  ring_buffer.cpp  watchdog.cpp  yolo.cpp
